--- a/.github/workflows/integration_ci.yml
+++ b/.github/workflows/integration_ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     services:
       mail:
-        image: greenmail/standalone:2.1.0-alpha-4
+        image: greenmail/standalone:2.1.8
         ports:
           - 3025:3025
           - 3143:3143
@@ -29,8 +29,8 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: "1.15.2"
-          otp-version: "26.0"
+          elixir-version: "1.19.4"
+          otp-version: "28.3"
       - name: Restore dependencies cache
         uses: actions/cache@v3
         with:
